# fastapi-sqlalchemy-template

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2e7dc2607fd2_create_users_table.py
src/: api_router.py  config.py  database.py  main.py
src/shared/infrastructure/sqlalchemy/: uow.py
src/users/application/: user_creator.py
src/users/domain/: models.py  repositories.py
src/users/infrastructure/api/: dependencies.py
src/users/infrastructure/api/controllers/: controllers.py
src/users/infrastructure/persistence/: models.py  sqlalchemy_user_repository.py
